cmake_minimum_required(VERSION 3.22)
project(GRAPHS)

set(CMAKE_CXX_STANDARD 14)

#add_executable(GRAPHS
#         Kruskal.cpp)

#add_executable(GRAPHS
#        BFS.cpp)

#add_executable(GRAPHS
#        DFS.cpp )

#add_executable(GRAPHS
#        Bellman_Ford.cpp)

#add_executable(GRAPHS
#        Topological.cpp)

#add_executable(GRAPHS
#        Dijkstra.cpp)

#add_executable(GRAPHS
#        "Multisource BFS.cpp")

#add_executable(GRAPHS
#        Floyd_Warshal.cpp)

#add_executable(GRAPHS
#        DSU.cpp)

#add_executable(GRAPHS
#        Cycle_Detection_Directed_GRAPH.cpp)


#add_executable(GRAPHS
#        Cycle_Detection_Undirected_Graph.cpp)

#add_executable(GRAPHS
#        MST_PRIMS.cpp)

#add_executable(GRAPHS
#        "Bridges_In_Graph(Tarjans Algo).cpp")

#add_executable(GRAPHS
#        BFS-Bipertile-or-not.cpp)

#add_executable(GRAPHS
#        Cycle-Exists-or-not.cpp)

#add_executable(GRAPHS
#        Implement_dijkstra.cpp)

#add_executable(GRAPHS
#        Implement_Bellman_ford.cpp)


#add_executable(GRAPHS
#        Implement_floyd_Warshall.cpp)


#add_executable(GRAPHS
#        Implement_Prims.cpp)

#add_executable(GRAPHS
#    Bipertile_BFS.cpp)

add_executable(GRAPHS
Bipertile_DFS.cpp)